Do not use thousands grouping when none is specified by the locale. Fixes PR standards/52282.